{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "08cd69e7-507a-4bed-86d9-70e77c0b7a6c",
            "actions": [
                {
                    "name": "HorizontalMove",
                    "type": "Button",
                    "id": "de0905f7-95e5-4510-b349-5fb30a5386ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "VerticalMove",
                    "type": "Button",
                    "id": "fad83282-9206-4370-adf5-8b386acf86e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "bb001824-1819-4eb1-b174-017a6c600e06",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0818c5dc-f843-4db2-ab5e-2d9918779968",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b01bab7e-89ad-47db-a165-83f5c5d90e18",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ad9461b2-5a86-4af2-95b3-cf7e3ff2fe66",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Abilities",
            "id": "dbb45081-e1a8-46cd-b61d-d3e8bed84cfe",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "2cd126a3-d07a-491c-a3ab-668e5a78d952",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "4b015748-ae13-48e7-bff1-03dbd91e85e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "da606efd-129d-4c7d-aef9-5996698d411b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a32712e-64df-4f73-8d86-09509eb3016a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "a6476a69-f5f3-495d-a7b0-62123c286c57",
            "actions": [
                {
                    "name": "ZoomOut",
                    "type": "Button",
                    "id": "7faafad0-4fce-409c-b645-73324d50f376",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cda76cdc-e4f0-4219-9897-18e3e7ffae6f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}